tests/snapshots/run_wpt_conformance__litert_relu_int64_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
relu.https.any.js relu int64 4D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reluInput: i64[1, 1, 1, 5];
  }

  nodes {
    [reluOutput] = relu(reluInput, label="");
  }

  outputs { reluOutput; }
}
