tests/snapshots/run_wpt_conformance__litert_relu_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
relu.https.any.js relu int8 4D tensor, litert
 relu :: relu int8 4D tensor: index 2: actual=0 expected=126 tolerance=0
  inputs: reluInput: [-128, 0, 126, 127]
  expected reluOutput: [0, 0, 126, 127]
  actual reluOutput: [0, 0, 0, 0]
  expected reluOutput full nd:
(shape [1, 2, 2, 1])
  [0] [0]
  [126] [127]
  actual reluOutput full nd:
(shape [1, 2, 2, 1])
  [0] [0]
  [0] [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reluInput: i8[1, 2, 2, 1];
  }

  nodes {
    [reluOutput] = relu(reluInput, label="");
  }

  outputs { reluOutput; }
}
