tests/snapshots/run_wpt_conformance__litert_reshape_float32_tensor_to_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape float32 tensor to 1D tensor",
    "litert",
    "PASS",
)
