tests/snapshots/run_wpt_conformance__litert_reverse_float16_2D_input_with_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reverse.https.any.js reverse float16 2D input with default options, litert
 reverse :: reverse float16 2D input with default options: index 0: actual=-96.125 expected=-64.4375 ulp=507 tolerance=4
  inputs: reverseInput: [-30.0625, 99.5625, 88.0625, -91.875, -23.796875, -91.3125, -63.15625, 12.0703125, -96.125, -44.78125, -80.0625, -64.4375]
  expected reverseOutput: [-64.4375, -80.0625, -44.78125, -96.125, 12.0703125, -63.15625, -91.3125, -23.796875, -91.875, 88.0625 ...] (len=12)
  actual reverseOutput: [-96.125, -44.78125, -80.0625, -64.4375, -23.796875, -91.3125, -63.15625, 12.0703125, -30.0625, 99.5625 ...] (len=12)
  expected reverseOutput full nd:
[-64.4375, -80.0625, -44.78125, -96.125, 12.0703125, -63.15625, -91.3125, -23.796875, -91.875, 88.0625, ...] (len=12, shape=[3, 4])
  actual reverseOutput full nd:
[-96.125, -44.78125, -80.0625, -64.4375, -23.796875, -91.3125, -63.15625, 12.0703125, -30.0625, 99.5625, ...] (len=12, shape=[3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reverseInput: f16[3, 4];
  }

  nodes {
    [reverseOutput] = reverse(reverseInput, axes=null, label="");
  }

  outputs { reverseOutput; }
}
