tests/snapshots/run_wpt_conformance__litert_reverse_float32_2D_input_with_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reverse.https.any.js reverse float32 2D input with default options, litert
 reverse :: reverse float32 2D input with default options: index 0: actual=-96.11729 expected=-64.43757 ulp=4152324 tolerance=4
  inputs: reverseInput: [-30.0561466217041, 99.56941986083984, 88.04620361328125, -91.87507629394533, -23.7972354888916, -91.28665161132813, -63.15204620361328, 12.0669527053833, -96.1172866821289, -44.77365493774414, -80.08650970458984, -64.43756866455078]
  expected reverseOutput: [-64.43757, -80.08651, -44.773655, -96.11729, 12.066953, -63.152046, -91.28665, -23.797235, -91.87508, 88.0462 ...] (len=12)
  actual reverseOutput: [-96.11729, -44.773655, -80.08651, -64.43757, -23.797235, -91.28665, -63.152046, 12.066953, -30.056147, 99.56942 ...] (len=12)
  expected reverseOutput full nd:
[-64.43757, -80.08651, -44.773655, -96.11729, 12.066953, -63.152046, -91.28665, -23.797235, -91.87508, 88.0462, ...] (len=12, shape=[3, 4])
  actual reverseOutput full nd:
[-96.11729, -44.773655, -80.08651, -64.43757, -23.797235, -91.28665, -63.152046, 12.066953, -30.056147, 99.56942, ...] (len=12, shape=[3, 4])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reverseInput: f32[3, 4];
  }

  nodes {
    [reverseOutput] = reverse(reverseInput, axes=null, label="");
  }

  outputs { reverseOutput; }
}
