tests/snapshots/run_wpt_conformance__litert_roundEven_float16_3D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
round_even.https.any.js roundEven float16 3D tensor, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: RoundEven { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    roundEvenInput: f16[1, 2, 2];
  }

  nodes {
    [roundEvenOutput] = roundEven(roundEvenInput, label="");
  }

  outputs { roundEvenOutput; }
}
